export const snapshot = {};

snapshot[`sass plugin 1`] = `4`;

snapshot[`sass plugin 2`] = `
{
  formats: [
    {
      engine: true,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: true,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: false,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engine: false,
      ext: ".json",
    },
    {
      engine: true,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engine: true,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      asset: true,
      engine: false,
      ext: ".scss",
      pageLoader: [AsyncFunction: text],
    },
    {
      asset: true,
      engine: false,
      ext: ".sass",
      pageLoader: [AsyncFunction: text],
    },
  ],
}
`;

snapshot[`sass plugin 3`] = `
[
]
`;

snapshot[`sass plugin 4`] = `
{
  content: "(removed for testing)",
  data: {
    content: "(removed for testing)",
    tags: [
    ],
    url: "/index.css.map",
  },
  dest: {
    ext: ".map",
    path: "/index.css",
  },
  src: {
    ext: undefined,
    path: "",
    remote: undefined,
  },
}
`;

snapshot[`sass plugin 5`] = `
{
  content: "(removed for testing)",
  data: {
    content: "(removed for testing)",
    tags: [
    ],
    url: "/index.css.map",
  },
  dest: {
    ext: ".map",
    path: "/index.css",
  },
  src: {
    ext: undefined,
    path: "",
    remote: undefined,
  },
}
`;

snapshot[`sass plugin 6`] = `
{
  content: "body{font:100% Helvetica,sans-serif;color:#333}
/*# sourceMappingURL=index.css.map */",
  data: {
    content: '@import "./_includes/sass/colors";
@import "sass/button";
',
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/index.css",
  },
  dest: {
    ext: ".css",
    path: "/index",
  },
  src: {
    ext: ".scss",
    path: "/index",
    remote: undefined,
  },
}
`;

snapshot[`sass plugin 7`] = `
{
  content: "body{color:blue}
/*# sourceMappingURL=index.css.map */",
  data: {
    content: '@import "sass/colors"

body
  color: \$primary-color
',
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/index.css",
  },
  dest: {
    ext: ".css",
    path: "/index",
  },
  src: {
    ext: ".sass",
    path: "/index",
    remote: undefined,
  },
}
`;
